# src/main/resources/api.yaml
@@ -2,7 +2,7 @@ openapi: "3.0.0"
 
 info:
   title: Ecommernce API
-  description:  Ecommernce API
+  description: Ecommernce API
   version: "0.1"
 
 tags:
@@ -91,7 +91,7 @@ paths:
         - Users
       summary: Delete user by id
       operationId: deleteUser
-      description:  Delete user by id
+      description: Delete user by id
       parameters:
         - in: path
           name: id
@@ -255,6 +255,120 @@ paths:
           description: Product deleted successfully.
         '404':
           description: Product not found.
+  #######################################
+  ######### Package #####################
+  #######################################
+  /packages:
+    get:
+      tags:
+        - Packages
+      summary: Get all packages
+      operationId: getAllPackages
+      description: Retrieve a list of all packages.
+      responses:
+        '200':
+          description: A list of packages.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/PackageDto'
+    post:
+      tags:
+        - Packages
+      summary: Create a new package
+      operationId: createPackage
+      description: Add a new package
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PackageDto'
+      responses:
+        '201':
+          description: Package created successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PackageDto'
+  /packages/{id}:
+    get:
+      tags:
+        - Packages
+      summary: Get a package by ID
+      operationId: getPackageById
+      description: Retrieve details of a specific package by its ID.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The ID of the package.
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Package details retrieved successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PackageDto'
+        '404':
+          description: Package not found.
+    put:
+      tags:
+        - Packages
+      summary: Update a package
+      operationId: updatePackage
+      description: Update details of an existing package.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The ID of the package to update.
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PackageDto'
+      responses:
+        '200':
+          description: Package updated successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PackageDto'
+        '404':
+          description: Package not found.
+    delete:
+        tags:
+          - Packages
+        summary: Delete a package
+        operationId: deletePackage
+        description: Remove a package from the catalog.
+        parameters:
+          - name: id
+            in: path
+            required: true
+            description: The ID of the package to delete.
+            schema:
+              type: integer
+              format: int64
+        responses:
+          '204':
+            description: Package deleted successfully.
+          '404':
+            description: Package not found.
+#######################################
+######     Package           ##########
+#######################################
+
 components:
   schemas:
     UserDto:
@@ -324,3 +438,29 @@ components:
         price:
           type: number
           format: double
+    PackageDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: Unique identifier of the package.
+        sender:
+          $ref: '#/components/schemas/UserDto'
+          description: The user who sends the package.
+        receiver:
+          $ref: '#/components/schemas/UserDto'
+          description: The user who receives the package.
+        status:
+          type: string
+          description: The current status of the package (e.g., Pending, Delivered, Returned).
+        deliveryDate:
+          type: string
+          format: date
+          description: The delivery date of the package.
+      required:
+        - id
+        - sender
+        - receiver
+        - status
+        - deliveryDate
